--- a/FragmentNavController/app/src/main/res/values/strings.xml
+++ b/FragmentNavController/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="fragmentAccueil">FragmentAccueil</string>
     <string name="fragmentA">FragmentA</string>
     <string name="fragmentB">FragmentB</string>
+    <string name="todo">TODO</string>
 </resources>
